public/css/style.css
header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  background-color: #eee;
}

video {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 768px;
  width: 1066px;
  margin-left: 430px;
  margin-top: 20px;
  margin-bottom: 20px;
}

#video {
  -o-transform: scaleX(-1);
  -moz-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  margin-bottom: 10px;
  font-weight: bold;
  font-size: larger;
}

.buttons-section {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.buttons-section button {
  background-color: white;
  border: 1px solid black;
  border-radius: 5px;
  padding: 5px;
}

.video-status {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  font-size: large;
  margin-top: 20px;
}

.info {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  font-size: large;
}

#video-preview-header {
  text-align: center;
}

@media screen and (max-width: 768px) {
  video {
    height: 400px;
    width: 600px;
    margin-left: 100px;
  }
}

@media screen and (max-width: 500px) {
  video {
    height: 300px;
    width: 410px;
    margin-left: 50px;
  }

  .container {
    width: fit-content;
  }
}

@media screen and (max-width: 375px) {
  video {
    margin-left: 0;
  }
}

